src/bootstrap/test/v0_8/rejects/01_user_builtin/main.zg
# requires: v0.8

fn naughty() -> int __builtin some_host_thing
print naughty()
